@@ -7,5 +7,5 @@
 VERSION_MAJOR="1"
 VERSION_MINOR="5"
 VERSION_PATCH="0"
-VERSION_EXTRA="git"
-VERSION_BUILD="744"
+VERSION_EXTRA="git-beta"
+VERSION_BUILD="745"
