@@ -13,6 +13,7 @@ Additions
 
 
 Changes
+13/11/11 Moved do_umode() hack from 1.4.0 to the protocol like it should have been.
 13/11/06 denora.sql no longer includes ison table data, all this is move to the ircd based
          sql files to remove extra columns that we will never set on that ircd.
 13/11/03 ModData functions require you to call it with your modules name, since moddata structs
